# devpilot

./: .gitignore  README.md  deploy.sh  install_service.sh  run.sh  shared.env.example
auth/: alembic.ini  main.py  pyproject.toml
auth/migrations/: env.py
auth/migrations/versions/: 001_initial.py  002_projects.py
docs/: DEVELOPMENT.md
frontend/: index-v1.html  index.html
frontend/css/: auth.css  chat.css  common.css  components.css  layout.css  monitor.css  vars.css
frontend/css/pages/: chat.css  dashboard.css  debug.css  settings.css  wizard.css  workspace.css
frontend/js/: sessions.js
frontend/js/components/: interaction-log.js  modal.js  placeholder.js  project-card.js  role-panel.js  sidebar.js  skill-modal.js  topbar.js
frontend/js/core/: api.js  events.js  router.js  shell.js  state.js
frontend/js/data/: ai-roles.js  prompt-store.js
frontend/js/mock/: data.js  simulator.js
frontend/js/pages/: chat.js  dashboard.js  debug.js  login.js  settings.js  wizard.js  workspace.js
frontend/legacy/: auth.js  boot.js  chat.js  monitor.js  sessions.js  ui.js  utils.js
keys/: jwt_private.pem  jwt_public.pem
nginx/: devpilot.conf
pcc-core/: .env.example  alembic.ini  pyproject.toml
pcc-core/app/: __init__.py  main.py
pcc-core/app/core/: config.py  database.py  events.py  logging.py  security.py
pcc-core/app/models/: approval.py  enums.py  mixins.py  notification.py  project.py  task.py  task_plan.py  user.py
pcc-core/migrations/: env.py
scripts/: deploy_task.sh  generate_keys.py
scripts/tasks/: P1-W1-01.conf  P1-W1-02.conf  P1-W1-03.conf
(+22 files in other folders)
