[project]
name = "devpilot-auth"
version = "0.1.0"
description = "DevPilot Platform — Authentication Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "PyJWT>=2.8",
    "bcrypt>=4.0",
    "structlog>=24.0",
    "slowapi>=0.1",
]
